force-app/main/default/objects/WarrantyClaim__c/WarrantyClaim__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage dealer warranty claims for vehicle part repairs and replacements, including coverage evaluation, approvals, rationale, and SLA tracking.</description>
    <label>Warranty Claim</label>
    <nameField>
        <displayFormat>WC-{000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>