force-app/main/default/objects/WarrantyClaim__c/fields/AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation__c</fullName>
    <description>AI recommendation derived from coverage and claim details.</description>
    <label>AI Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>