force-app/main/default/objects/WarrantyClaim__c/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>AI-generated summary of the dealer intake and eligibility rationale.</description>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>