force-app/main/default/objects/WarrantyClaim__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <description>When the claim was approved.</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>