force-app/main/default/objects/WarrantyClaim__c/fields/ApproverSlackRef__c.field-meta.xml
<CustomField>
    <fullName>ApproverSlackRef__c</fullName>
    <description>Slack message or thread reference for the approver interaction.</description>
    <label>Approver Slack Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>