force-app/main/default/objects/WarrantyClaim__c/fields/AttachmentCount__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCount__c</fullName>
    <description>Count of files linked to the claim.</description>
    <label>Attachment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>