force-app/main/default/objects/WarrantyClaim__c/fields/ClarificationRequest__c.field-meta.xml
<CustomField>
    <fullName>ClarificationRequest__c</fullName>
    <description>Text of the current approver clarification request.</description>
    <label>Clarification Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>