force-app/main/default/objects/WarrantyClaim__c/fields/CoverageSnapshot__c.field-meta.xml
<CustomField>
    <fullName>CoverageSnapshot__c</fullName>
    <description>Serialized coverage summary captured at submission.</description>
    <label>Coverage Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>