force-app/main/default/objects/WarrantyClaim__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vehicle owner/customer related to this claim.</description>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Warranty Claims</relationshipLabel>
    <relationshipName>CustomerWarrantyClaims</relationshipName>
    <type>Lookup</type>
</CustomField>