force-app/main/default/objects/WarrantyClaim__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dealer submitting or performing the work.</description>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Warranty Claims</relationshipLabel>
    <relationshipName>DealerWarrantyClaims</relationshipName>
    <type>Lookup</type>
</CustomField>