force-app/main/default/objects/WarrantyClaim__c/fields/DealerPhone__c.field-meta.xml
<CustomField>
    <fullName>DealerPhone__c</fullName>
    <description>Dealer phone for Digital Engagement matching.</description>
    <label>Dealer Phone</label>
    <type>Phone</type>
</CustomField>