force-app/main/default/objects/WarrantyClaim__c/fields/DealerResponseSummary__c.field-meta.xml
<CustomField>
    <fullName>DealerResponseSummary__c</fullName>
    <description>Structured summary of the dealer clarification response.</description>
    <label>Dealer Response Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>