force-app/main/default/objects/WarrantyClaim__c/fields/DecisionRationale__c.field-meta.xml
<CustomField>
    <fullName>DecisionRationale__c</fullName>
    <description>Approver decision rationale (Slack/Agent writes).</description>
    <label>Decision Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>