force-app/main/default/objects/WarrantyClaim__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <description>Preliminary diagnosis notes.</description>
    <label>Diagnosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>