force-app/main/default/objects/WarrantyClaim__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>Coverage eligibility assessment.</description>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Likely</fullName>
                <default>true</default>
                <label>Likely</label>
            </value>
            <value>
                <fullName>Borderline</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>