force-app/main/default/objects/WarrantyClaim__c/fields/EligibilityRationale__c.field-meta.xml
<CustomField>
    <fullName>EligibilityRationale__c</fullName>
    <description>Explanation from CoverageEngine/Agent for eligibility.</description>
    <label>Eligibility Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>