force-app/main/default/objects/WarrantyClaim__c/fields/EstimatedCost__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCost__c</fullName>
    <description>Estimated parts/labor cost.</description>
    <label>Estimated Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>