force-app/main/default/objects/WarrantyClaim__c/fields/ExternalDMSReference__c.field-meta.xml
<CustomField>
    <fullName>ExternalDMSReference__c</fullName>
    <description>External dealer management system reference.</description>
    <label>External DMS Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>