force-app/main/default/objects/WarrantyClaim__c/fields/LaborHours__c.field-meta.xml
<CustomField>
    <fullName>LaborHours__c</fullName>
    <description>Estimated/claimed labor hours.</description>
    <label>Labor Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>