force-app/main/default/objects/WarrantyClaim__c/fields/LastDealerInteraction__c.field-meta.xml
<CustomField>
    <fullName>LastDealerInteraction__c</fullName>
    <description>Last WhatsApp/Web message time for this claim.</description>
    <label>Last Dealer Interaction</label>
    <type>DateTime</type>
</CustomField>