force-app/main/default/objects/WarrantyClaim__c/fields/MessagingSessionId__c.field-meta.xml
<CustomField>
    <fullName>MessagingSessionId__c</fullName>
    <description>Digital Engagement messaging session identifier.</description>
    <label>Messaging Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>