force-app/main/default/objects/WarrantyClaim__c/fields/MissingInfoFlag__c.field-meta.xml
<CustomField>
    <fullName>MissingInfoFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating the claim needs more information.</description>
    <label>Missing Info Flag</label>
    <type>Checkbox</type>
</CustomField>