force-app/main/default/objects/WarrantyClaim__c/fields/Odometer__c.field-meta.xml
<CustomField>
    <fullName>Odometer__c</fullName>
    <description>Mileage at time of claim.</description>
    <label>Odometer</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>