force-app/main/default/objects/WarrantyClaim__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific part if known.</description>
    <label>Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>PartWarrantyClaims</relationshipName>
    <type>Lookup</type>
</CustomField>