force-app/main/default/objects/WarrantyClaim__c/fields/PartCategory__c.field-meta.xml
<CustomField>
    <fullName>PartCategory__c</fullName>
    <description>Part category when specific part number is unknown.</description>
    <label>Part Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exhaust</fullName>
            </value>
            <value>
                <fullName>Cooling</fullName>
            </value>
            <value>
                <fullName>Steering</fullName>
            </value>
            <value>
                <fullName>Tires</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>