force-app/main/default/objects/WarrantyClaim__c/fields/ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ReasonCode__c</fullName>
    <description>Reason for decision, typically for rejections or notes.</description>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
                <default>true</default>
                <label>Generic</label>
            </value>
            <value>
                <fullName>Out-of-Warranty-Time</fullName>
            </value>
            <value>
                <fullName>Out-of-Warranty-Mileage</fullName>
            </value>
            <value>
                <fullName>Not a Covered Part</fullName>
            </value>
            <value>
                <fullName>Insufficient Evidence</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>