force-app/main/default/objects/WarrantyClaim__c/fields/RejectionDate__c.field-meta.xml
<CustomField>
    <fullName>RejectionDate__c</fullName>
    <description>When the claim was rejected.</description>
    <label>Rejection Date</label>
    <type>DateTime</type>
</CustomField>