force-app/main/default/objects/WarrantyClaim__c/fields/RepairOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>RepairOrderNumber__c</fullName>
    <description>Dealer-provided repair order number.</description>
    <label>Repair Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>