force-app/main/default/objects/WarrantyClaim__c/fields/RequiresFollowUp__c.field-meta.xml
<CustomField>
    <fullName>RequiresFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for claims requiring follow-up or clarification.</description>
    <label>Requires Follow Up</label>
    <type>Checkbox</type>
</CustomField>