force-app/main/default/objects/WarrantyClaim__c/fields/SLADue__c.field-meta.xml
<CustomField>
    <fullName>SLADue__c</fullName>
    <description>Due date/time for SLA tracking.</description>
    <label>SLA Due</label>
    <type>DateTime</type>
</CustomField>