force-app/main/default/objects/WarrantyClaim__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Claim lifecycle status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Approver Review</fullName>
            </value>
            <value>
                <fullName>Needs More Info</fullName>
            </value>
            <value>
                <fullName>Manual Review Required</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>