force-app/main/default/objects/WarrantyClaim__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <description>When the claim was submitted.</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>