force-app/main/default/objects/WarrantyClaim__c/fields/Symptom__c.field-meta.xml
<CustomField>
    <fullName>Symptom__c</fullName>
    <description>Dealer-described concern/symptom.</description>
    <label>Symptom</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>