force-app/main/default/objects/WarrantyClaim__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vehicle/Asset associated to this claim.</description>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>WarrantyClaims</relationshipName>
    <type>Lookup</type>
</CustomField>