force-app/main/default/objects/WarrantyClaim__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>VIN captured at intake for convenience; Asset VIN remains source of truth.</description>
    <inlineHelpText>17-character Vehicle Identification Number</inlineHelpText>
    <label>VIN</label>
    <length>17</length>
    <type>Text</type>
</CustomField>